--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-- "8"
+- "10"
 cache:
   directories:
   - "node_modules"
 script:
 - ./node_modules/.bin/standard
-- npm test
+- yarn test
