--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "request": "^2.88.0"
+  },
   "dependencies": {
     "request-promise-native": "^1.0.5"
   },
